<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6CC8F4"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="151dp"
        android:text="@string/bmi"
        android:textColor="#040303"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="402dp"
        android:layout_height="59dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="279dp"
        android:text="@string/enter_height"
        android:textColor="#000000"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="402dp"
        android:layout_height="59dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="138dp"
        android:layout_marginBottom="171dp"
        android:hint="@string/in_kg"
        android:text="@string/enter_weight"
        android:textColor="#000000"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="57dp"
        android:layout_marginBottom="245dp"
        android:ems="10"
        android:hint="@string/in_metres"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="179dp"
        android:layout_marginBottom="134dp"
        android:ems="10"
        android:hint="@string/in_kg"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/button"
        android:layout_width="127dp"
        android:layout_height="64dp"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="134dp"
        android:layout_marginRight="134dp"
        android:layout_marginBottom="30dp"
        android:background="#FB6565"
        android:text="@string/calculate"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#F8F5F5" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="352dp"
        android:gravity="center"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="221dp"
        android:layout_height="138dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="-55dp"
        android:layout_marginBottom="430dp"
        app:srcCompat="@drawable/speedometer1" />

</RelativeLayout>